--- a/WorkAssistantFV/WorkAssistantFV.csproj
+++ b/WorkAssistantFV/WorkAssistantFV.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -154,9 +154,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-      <Compile Include="Models\Users.cs" />
-      <Compile Include="Models\User_Tasks.cs" />
-      <Compile Include="Models\__Relationships.cs" />
+    <Compile Include="Models\Company.cs" />
+    <Compile Include="Models\Company_Users.cs" />
+    <Compile Include="Models\Overtime.cs" />
+    <Compile Include="Models\Users.cs" />
+    <Compile Include="Models\User_Tasks.cs" />
+    <Compile Include="Models\__Relationships.cs" />
     <Compile Include="ViewModel\Home.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +174,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\UserContacts.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewModel\UserContacts.Designer.cs">
+      <DependentUpon>UserContacts.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewModel\UserTask.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -193,6 +202,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ViewModel\UserContacts.resx">
+      <DependentUpon>UserContacts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewModel\UserTask.resx">
       <DependentUpon>UserTask.cs</DependentUpon>
     </EmbeddedResource>
